spacings fix small gutter

--- a/src/scss/util/_debug.scss
+++ b/src/scss/util/_debug.scss
@@ -62,7 +62,7 @@ body.debug {
         }
     }
 
-    .content-width {
+    .o-content-width {
         border-left: dashed 1px rgba(0, 100, 255, 0.3);
         border-right: dashed 1px rgba(0, 100, 255, 0.3);
         &:before,
